--- a/templates/index.html
+++ b/templates/index.html
@@ -6,16 +6,20 @@
     <title>Integration Calculator</title>
 </head>
 <body>
+    <div>
+    <div>
     <h1>Integration Calculator</h1>
-    <form action="/calculate" method="post">
-        <label for="expression">Expression:</label>
-        <input type="text" id="expression" name="expression" required><br><br>
+    <form action="/inti" method="post">
+        <label for="fxn">fxn:</label>
+        <input type="text" id="fxn" name="fxn" required><br><br>
         <label for="variable">Variable:</label>
         <input type="text" id="variable" name="variable" required><br><br>
         <button type="submit">Calculate</button>
     </form>
+</div>
+<div>
     <h1>definate Integration Calculator</h1>
-    <form action="/integrate" method="post">
+    <form action="/definti" method="post">
         <label for="fxn">Function:</label>
         <input type="text" id="fxn" name="fxn" required><br><br>
         <label for="lowerBound">lower bound:</label>
@@ -24,5 +28,43 @@
         <input type="text" id="upperBound" name="upperBound" required><br><br>
         <button type="submit">Calculate</button>
     </form>
+</div>
+</div>
+<div>
+<div>
+    <h1>Differentiation Calculator</h1>
+    <form action="/diff" method="post">
+        <label for="fxn">fxn:</label>
+        <input type="text" id="fxn" name="fxn" required><br><br>
+        <label for="variable">Variable:</label>
+        <input type="text" id="variable" name="variable" required><br><br>
+        <button type="submit">Calculate</button>
+    </form>
+</div>
+<div>
+    <h1>evaluate the derivative Calculator</h1>
+    <form action="/defdiff" method="post">
+        <label for="fxn">Function:</label>
+        <input type="text" id="fxn" name="fxn" required><br><br>
+        <label for="variable">Variable:</label>
+        <input type="text" id="variable" name="variable" required><br><br>
+        <label for="Value">Value:</label>
+        <input type="text" id="value" name="value" required><br><br>
+        
+        <button type="submit">Calculate</button>
+    </form>
+</div>
+</div>
+    <style>
+        body{
+            display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+
+        }
+    </style>
 </body>
 </html>
